--- a/pom.xml
+++ b/pom.xml
@@ -32,9 +32,50 @@
             <version>3.3.0</version>
             <scope>test</scope>
         </dependency>
+
+        <!-- For integration tests -->
+        <dependency>
+            <groupId>com.jayway.restassured</groupId>
+            <artifactId>rest-assured</artifactId>
+            <version>2.9.0</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <version>3.6.2</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.awaitility</groupId>
+            <artifactId>awaitility</artifactId>
+            <version>3.0.0-rc2</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
+    <!-- INTEGRATION TESTS STEPS:
+        1. Reserve free port => build-helper-maven-plugin : reserve-network-port
+        2. Generate application configuration => process test resources: my-it-config.json with ${http.port}
+        3. Start the application as a background process => maven-antrun-plugin
+        4. Execute integration tests => maven-failsafe-plugin
+        5. Stop the application => maven-antrun-plugin
+
+        To run integration tests:
+        mvn clean verify
+        because mvn integration-test will not stop server !!!
+    -->
+
     <build>
+        <!-- Replaces placeholders in test/resources with values from maven variables eg. http.port variable from another plugin -->
+        <!-- src/test/resources/my-it-config.json with ${http.port} -->
+        <testResources>
+            <testResource>
+                <directory>src/test/resources</directory>
+                <filtering>true</filtering>
+            </testResource>
+        </testResources>
+
         <plugins>
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -60,7 +101,7 @@
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                     <manifestEntries>
                                         <Main-Class>io.vertx.core.Starter</Main-Class>
-                                        <Main-Verticle>com.gryglicki.vertx.MyFirstVerticle</Main-Verticle>
+                                        <Main-Verticle>com.gryglicki.vertx.WhiskyRESTVerticle</Main-Verticle>
                                     </manifestEntries>
                                 </transformer>
                             </transformers>
@@ -70,6 +111,150 @@
                     </execution>
                 </executions>
             </plugin>
+
+            <!-- Integration Tests plugin - reserves free http port during process-sources phase -->
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>build-helper-maven-plugin</artifactId>
+                <version>1.9.1</version>
+                <executions>
+                    <execution>
+                        <id>reserve-network-port</id>
+                        <goals>
+                            <goal>reserve-network-port</goal>
+                        </goals>
+                        <phase>process-sources</phase>
+                        <configuration>
+                            <portNames>
+                                <portName>http.port</portName> <!-- Sets maven http.port variable for usage in another plugins / processed resources -->
+                            </portNames>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+
+            <!-- We use the maven-antrun-plugin to start the application before the integration tests and stop them afterward -->
+            <plugin>
+                <artifactId>maven-antrun-plugin</artifactId>
+                <version>1.8</version>
+                <executions>
+                    <execution>
+                        <id>start-vertx-app</id>
+                        <phase>pre-integration-test</phase>
+                        <goals>
+                            <goal>run</goal>
+                        </goals>
+                        <configuration>
+                            <target>
+                                <!-- Launch the application as in 'production' using the fatjar generated during package phase.
+                                     We pass the generated configuration, configuring the http port to the picked one -->
+                                <echo message="Starting Vert.x fat jar" />
+                                <exec executable="${java.home}/bin/java"
+                                      dir="${project.build.directory}"
+                                      spawn="true">
+                                    <arg value="-jar"/>
+                                    <arg value="${project.artifactId}-${project.version}-fat.jar"/>
+                                    <arg value="-conf"/>
+                                    <arg value="${project.build.directory}/test-classes/my-it-config.json"/>
+                                </exec>
+                            </target>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>stop-vertx-app</id>
+                        <phase>post-integration-test</phase>
+                        <goals>
+                            <goal>run</goal>
+                        </goals>
+                        <configuration>
+                            <!-- Kill the started process. Finding the right process is a bit tricky and different on windows and linux -->
+                            <!-- TODO: Try to save in a file PID of the process when starting -->
+                            <target>
+                                <echo message="Stopping Vert.x fat jar" />
+                                <exec osfamily="unix"
+                                      executable="bash"
+                                      dir="${project.build.directory}"
+                                      spawn="false">
+                                    <arg value="-c"/>
+                                    <arg value="ps ax | grep -Ei '[\-]DtestPort=${http.port}\s+\-jar\s+${project.artifactId}' | awk 'NR==1{print $1}' | xargs kill -SIGTERM"/>
+                                </exec>
+                                <!-- TODO: windows process finder don't work -->
+                                <!--<exec osfamily="windows"
+                                      executable="wmic"
+                                      dir="${project.build.directory}"
+                                      spawn="false">
+                                    <arg value="process"/>
+                                    <arg value="where"/>
+                                    <arg value="CommandLine like '%${project.artifactId}%' and not name='wmic.exe'"/>
+                                    <arg value="delete"/>
+                                </exec>-->
+                            </target>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+
+            <!-- Integration Tests runner -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-failsafe-plugin</artifactId>
+                <version>2.18.1</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>integration-test</goal>
+                            <goal>verify</goal>
+                        </goals>
+                        <configuration>
+                            <systemProperties> <!-- Tests can use this system property to connect to the right server -->
+                                <http.port>${http.port}</http.port>
+                            </systemProperties>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
+
+    <!--<profiles>
+        &lt;!&ndash; A profile for windows as the stop command is different &ndash;&gt;
+        <profile>
+            <id>windows</id>
+            <activation> &lt;!&ndash; Auto activation of profile on windows platform &ndash;&gt;
+                <os>
+                    <family>windows</family>
+                </os>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <artifactId>maven-antrun-plugin</artifactId>
+                        <version>1.8</version>
+                        <executions>
+                            <execution>
+                                <id>stop-vertx-app</id>
+                                <phase>post-integration-test</phase>
+                                <goals>
+                                    <goal>run</goal>
+                                </goals>
+                                <configuration>
+                                    <target>
+                                        <echo message="Stopping Vert.x fat jar" />
+                                        <exec executable="wmic"
+                                              dir="${project.build.directory}"
+                                              spawn="false">
+                                            <arg value="process"/>
+                                            <arg value="where"/>
+                                            <arg value="CommandLine like '%${project.artifactId}%' and not name='wmic.exe'"/>
+                                            <arg value="delete"/>
+                                        </exec>
+                                    </target>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>-->
 </project>
